--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,12 @@ services:
       - LLM_MODEL=${LLM_MODEL:-qwen3:8b}
     volumes:
       - ./app/backend/uploads:/app/uploads
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8010/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 1200s  # 20 min grace period for model download & loading
     depends_on:
       - ollama
 
