--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -48,8 +48,8 @@ ENV HF_TOKEN=
 ENV MODELS_PRECACHED=1
 
 # Telemetry webhook URL (injected at build time from GitHub secret)
-ARG TELEMETRY_WEBHOOK_URL=""
-ENV TELEMETRY_WEBHOOK_URL=${TELEMETRY_WEBHOOK_URL}
+ARG TELEMETRY_WEBHOOK_URL
+ENV TELEMETRY_WEBHOOK_URL=${TELEMETRY_WEBHOOK_URL:-}
 
 # Expose port
 EXPOSE 8010
