enable GPU for Ollama

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -18,3 +18,12 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
+
+  ollama:
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
