--- a/app/backend/pyproject.toml
+++ b/app/backend/pyproject.toml
@@ -8,10 +8,11 @@ dependencies = [
     "uvicorn>=0.32.0",
     "python-multipart>=0.0.12",
     "openai>=1.0.0",
-    "torch>=2.7.0,<2.8.0",
-    "torchaudio>=2.7.0,<2.8.0",
+    "torch>=2.7.0,<2.9.0",
+    "torchaudio>=2.7.0,<2.9.0",
     "whisperx>=3.7.0",
     "pdfplumber>=0.10.0",
     # Pin huggingface_hub to <1.0 until whisperx/pyannote update to use 'token' instead of 'use_auth_token'
-    "huggingface_hub>=0.24.0,<1.0",    
+    "huggingface_hub>=0.24.0,<1.0",
+    "pyannote.audio>=3.1.0,<4.0",
 ]
