added api connectivity to reverse proxy

--- a/app/frontend/nginx.conf
+++ b/app/frontend/nginx.conf
@@ -4,6 +4,26 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Reverse proxy: forward /api/ and /uploads/ to the backend service
+    # This allows the frontend to reach the backend via relative paths,
+    # regardless of the server hostname/IP
+    location /api/ {
+        proxy_pass http://backend:8010;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 500M;
+        # LLM summarization and audio transcription can take several minutes
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+        proxy_connect_timeout 10s;
+    }
+
+    location /uploads/ {
+        proxy_pass http://backend:8010;
+        proxy_set_header Host $host;
+    }
+
     # Handle SPA routing
     location / {
         try_files $uri $uri/ /index.html;
