--- a/app/frontend/nginx.conf
+++ b/app/frontend/nginx.conf
@@ -1,8 +1,28 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
     root /usr/share/nginx/html;
     index index.html;
+
+    # Proxy API requests to the backend
+    location /api/ {
+        proxy_pass http://backend:8010;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 600s;
+        client_max_body_size 500M;
+    }
+
+    # Proxy health check
+    location = /health {
+        proxy_pass http://backend:8010;
+    }
+
+    # Proxy root info endpoint
+    location = /info {
+        proxy_pass http://backend:8010/;
+    }
 
     # Handle SPA routing
     location / {
